import Foundation

struct ConfigurationStrings {
    static let fatalErrorMessage = "init(coder:) has not been implemented"
    static let filter = "filter"
    static let btnFilter = "btnfilter"
    static let cellDefault = "cell"
    static let tblVwListCharacter = "tblVwListCharacter"
    static let emptyString = ""
    static let tableViewCharacterCells = "TableViewCharacterCells"
    static let imgCharacter = "imgCharacter"
    static let imgBackgroundDetail = "imgBackgroundDetail"
    static let tfFilter = "tfFilter"
    static let pckVwFilter = "pckVwFilter"
    static let imgBackgroundFilter = "imgBackgroundFilter"
    static let getMethod = "GET"
    static let ErrorResponse = "Erro:"
    static let MessageErrorData = "Não há dados na resposta"
}
